# uv-practice

./: README.md  pyproject.toml
libs/base/: pyproject.toml
libs/base/src/base/: __init__.py
services/client/: main.py  pyproject.toml
services/client/src/client/: __init__.py
