[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dương Xuân Bách", email = "bachduong7103@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
]

[project.scripts]
client = "client:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
base = { workspace = true }
